@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -64,7 +64,7 @@ public abstract class ResourceHandlerFactory {
             }
         }
         try {
-            theInstance = (ResourceHandlerFactory) Class.forName(prop).newInstance();
+            theInstance = (ResourceHandlerFactory) Class.forName(prop).getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             // CheckStyle: stop system..print check
             System.err.println("Failed to instantiate class: " + prop);
