@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -81,7 +81,7 @@ public class FastRJUnitWrapper {
             try {
                 Class<?> runListenerClass = Class.forName(runListenerClassName);
                 if (runListenerArg == null) {
-                    runListener = (RunListener) runListenerClass.newInstance();
+                    runListener = (RunListener) runListenerClass.getDeclaredConstructor().newInstance();
                 } else {
                     Constructor<?> cons = runListenerClass.getDeclaredConstructor(String.class);
                     runListener = (RunListener) cons.newInstance(runListenerArg);
